fix: Table divider display issue on Safari (#1522)
* fix: use different approach that is compatible with Safari to display table dividers

* fix: add right color for dark theme and remove unnecessary class

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -208,20 +208,25 @@
   position: relative;
 }
 
-.table-divider::after {
-  content: "";
-  position: absolute;
-  left: 1rem;
-  right: 1rem;
-  bottom: 0;
-  height: 1px;
-  background-color: var(--color-alpha-black-100);
+.table-divider {
+  background-image: linear-gradient(
+    to right,
+    transparent 1rem,
+    var(--color-alpha-black-100) 1rem,
+    var(--color-alpha-black-100) calc(100% - 1rem),
+    transparent calc(100% - 1rem)
+  );
+  background-repeat: no-repeat;
+  background-size: 100% 1px;
+  background-position: bottom;
 }
 
-[data-theme="dark"] .table-divider::after  {
-  background-color: var(--color-alpha-white-200);
-}
-
-.table-divider:last-child::after {
-  display: none;
+[data-theme="dark"] .table-divider {
+  background-image: linear-gradient(
+    to right,
+    transparent 1rem,
+    var(--color-alpha-white-200) 1rem,
+    var(--color-alpha-white-200) calc(100% - 1rem),
+    transparent calc(100% - 1rem)
+  );
 }
